# embers-glog-fork

./: .gitignore  CMakeLists.txt  Packaging.cmake  README.md  embers-config.cmake.in  genindex.html  index.html  objects.inv  search.html  searchindex.js
.glog/: glog-scan.sarif
_sources/: index.rst.txt
_sources/api/: classembers_1_1Barrier.rst.txt  classembers_1_1GridBarrier.rst.txt  classembers_1_1LockingQueue1P1C.rst.txt  classembers_1_1LockingQueue1P1C_1_1Contents.rst.txt  classembers_1_1MonotonicCounter.rst.txt  classembers_1_1NonLockingQueue.rst.txt  classembers_1_1NonLockingQueue_1_1Contents.rst.txt  classembers_1_1NonLockingQueue_1_1Entry.rst.txt  classembers_1_1RWLock.rst.txt  classembers_1_1SpinLock.rst.txt  classembers_1_1StatusError.rst.txt  classembers_1_1TicketLock.rst.txt  classembers_1_1ValueOrError.rst.txt  classembers_1_1ValueOrError_3_01T_01_6_01_4.rst.txt  classembers_1_1Xlator.rst.txt  classembers_1_1amdgpu_1_1GFXArch.rst.txt  classembers_1_1amdgpu_1_1HwRegIDs.rst.txt  classembers_1_1atomic.rst.txt  classembers_1_1unique__ptr.rst.txt  classembers_1_1unique__ptr_3_01T_0f_0e_00_01D_01_4.rst.txt  define_std__source__location_8h_1a20cb5df3f88bd07135a416ab670710b2.rst.txt  define_std__source__location_8h_1ab43b2ef3bb550cf9543e26646586bf8a.rst.txt  dir_include.rst.txt  dir_include_embers.rst.txt  dir_include_embers_amdgpu.rst.txt  dir_include_embers_crypto.rst.txt  dir_include_embers_crypto_ethash.rst.txt  dir_include_embers_helpers.rst.txt  dir_include_embers_memory.rst.txt  dir_include_embers_memory_hip_detail.rst.txt  dir_include_embers_primitives.rst.txt  dir_include_embers_rand.rst.txt  embers_root.rst.txt  enum_arch_8h_1a94dcac5934570867b3bfd382309037d2.rst.txt  enum_chipid_8h_1abe5c8d4aa6ff6c31c62a4bc1627c9adc.rst.txt  enum_memory__model_8h_1ab6283ed35ab7cd3fe43d8c4796652b7f.rst.txt  file_include_embers_amdgpu_arch.h.rst.txt  file_include_embers_amdgpu_chipid.h.rst.txt  (+150 more)
api/: classembers_1_1Barrier.html  classembers_1_1GridBarrier.html  classembers_1_1LockingQueue1P1C.html  classembers_1_1LockingQueue1P1C_1_1Contents.html  classembers_1_1MonotonicCounter.html  classembers_1_1NonLockingQueue.html  classembers_1_1NonLockingQueue_1_1Contents.html  classembers_1_1NonLockingQueue_1_1Entry.html  classembers_1_1RWLock.html  classembers_1_1SpinLock.html  classembers_1_1StatusError.html  classembers_1_1TicketLock.html  classembers_1_1ValueOrError.html  classembers_1_1ValueOrError_3_01T_01_6_01_4.html  classembers_1_1Xlator.html  classembers_1_1amdgpu_1_1GFXArch.html  classembers_1_1amdgpu_1_1HwRegIDs.html  classembers_1_1atomic.html  classembers_1_1unique__ptr.html  classembers_1_1unique__ptr_3_01T_0f_0e_00_01D_01_4.html  define_std__source__location_8h_1a20cb5df3f88bd07135a416ab670710b2.html  define_std__source__location_8h_1ab43b2ef3bb550cf9543e26646586bf8a.html  dir_include.html  dir_include_embers.html  dir_include_embers_amdgpu.html  dir_include_embers_crypto.html  dir_include_embers_crypto_ethash.html  dir_include_embers_helpers.html  dir_include_embers_memory.html  dir_include_embers_memory_hip_detail.html  dir_include_embers_primitives.html  dir_include_embers_rand.html  embers_root.html  enum_arch_8h_1a94dcac5934570867b3bfd382309037d2.html  enum_chipid_8h_1abe5c8d4aa6ff6c31c62a4bc1627c9adc.html  enum_memory__model_8h_1ab6283ed35ab7cd3fe43d8c4796652b7f.html  file_include_embers_amdgpu_arch.h.html  file_include_embers_amdgpu_chipid.h.html  file_include_embers_amdgpu_hwid.h.html  file_include_embers_amdgpu_realtime.h.html  (+148 more)
cmake/util/: git_pre-commit.in
docs_exhale/: Makefile  conf.py
tests/: CMakeLists.txt
tests/hip/: CMakeLists.txt  almost_equal_test.cc  arch_test.cc  atomic_test.cc  barrier_test.cc  chipid_test.cc  counter_test.cc  cubehash256.cc  ethash.cc  fill_buffer_rand_test.cc  grid_barrier_test.cc  hwid_test.cc  keccak256.cc  locking_queue_test.cc  memcmp_test.cc  memcpy_test.cc  memset_test.cc  nonlocking_queue_pathological_test.cc  nonlocking_queue_test.cc  rand_test.cc  realtime_test.cc  rwlock_test.cc  spinlock_test.cc  test_helpers.h  test_status.cc  ticketlock_test.cc  unique_ptr_test.cc  waitgroup_test.cc  xorshift_test.cc
utils/: run_emberstests.sh
(+45 files in other folders)
